--- a/src/Pandoc/UI/MainWindow.fxml
+++ b/src/Pandoc/UI/MainWindow.fxml
@@ -1,8 +1,50 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<GridPane fx:controller="Pandoc.UI.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Pandoc.UI.Controller">
+    <padding>
+        <Insets bottom="20" left="20" right="20" top="20" />
+    </padding>
+
+    <Label text="Input File" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+    <TextField GridPane.columnIndex="0" GridPane.rowIndex="1" />
+    <Button onAction="#setInputFile" text="Set input" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+
+    <Label text="Output file" GridPane.columnIndex="2" GridPane.rowIndex="0" />
+
+    <TextField GridPane.columnIndex="2" GridPane.rowIndex="1" />
+    <Button onAction="#setOutputFile" text="Set output" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+    <ComboBox promptText="Select output format" GridPane.columnIndex="3">
+        <items>
+            <FXCollections fx:factory="observableArrayList">
+                <String fx:value="Pdf" />
+                <String fx:value="Word" />
+                <String fx:value="Html" />
+            </FXCollections>
+        </items>
+        <value>
+            <String fx:value="Pdf" />
+        </value>
+    </ComboBox>
+    <columnConstraints>
+        <ColumnConstraints percentWidth="25.0" />
+        <ColumnConstraints prefWidth="64.0" />
+        <ColumnConstraints percentWidth="25.0" />
+        <ColumnConstraints prefWidth="72.0" />
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0" />
+        <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0" />
+        <RowConstraints />
+    </rowConstraints>
 </GridPane>
