--- a/src/Pandoc/UI/MainWindow.fxml
+++ b/src/Pandoc/UI/MainWindow.fxml
@@ -11,46 +11,53 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Pandoc.UI.Controller">
+<?import javafx.scene.text.Text?>
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.121"
+          xmlns:fx="http://javafx.com/fxml/1" fx:controller="Pandoc.UI.Controller">
     <padding>
-        <Insets bottom="20" left="20" right="20" top="20" />
+        <Insets bottom="20" left="20" right="20" top="20"/>
     </padding>
 
-    <Label text="Input File" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+    <Label text="Input File" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
     <TextField fx:id="inputFile" GridPane.columnIndex="0" GridPane.rowIndex="1" editable="false"/>
-    <Button onAction="#setInputFile" text="Set input" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+    <Button onAction="#setInputFile" text="Set input" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
 
-    <Label text="Output file" GridPane.columnIndex="2" GridPane.rowIndex="0" />
+    <Label text="Output file" GridPane.columnIndex="2" GridPane.rowIndex="0"/>
 
     <TextField fx:id="outputFile" GridPane.columnIndex="2" GridPane.rowIndex="1" editable="false"/>
-    <Button onAction="#setOutputFile" text="Set output" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+    <Button onAction="#setOutputFile" text="Set output" GridPane.columnIndex="3" GridPane.rowIndex="1"/>
     <ComboBox promptText="Select output format" GridPane.columnIndex="3">
         <items>
             <FXCollections fx:factory="observableArrayList">
-                <String fx:value="Pdf" />
-                <String fx:value="Word" />
-                <String fx:value="Html" />
+                <String fx:value="Pdf"/>
+                <String fx:value="Word"/>
+                <String fx:value="Html"/>
             </FXCollections>
         </items>
         <value>
-            <String fx:value="Pdf" />
+            <String fx:value="Pdf"/>
         </value>
     </ComboBox>
 
     <GridPane alignment="center" GridPane.columnIndex="0" GridPane.columnSpan="4" GridPane.rowIndex="2">
-        <Button fx:id="convertButton" GridPane.rowIndex="0" GridPane.columnIndex="0" text="Convert" visible="false" onAction="#convertDocument"/>
+        <Button fx:id="convertButton" GridPane.rowIndex="0" GridPane.columnIndex="0" text="Convert" visible="false"
+                onAction="#convertDocument"/>
+    </GridPane>
+
+    <GridPane alignment="center" GridPane.columnIndex="0" GridPane.rowIndex="3">
+        <Text text="Bla bla bla"/>
     </GridPane>
 
     <columnConstraints>
-        <ColumnConstraints percentWidth="25.0" />
-        <ColumnConstraints prefWidth="64.0" />
-        <ColumnConstraints percentWidth="25.0" />
-        <ColumnConstraints prefWidth="72.0" />
+        <ColumnConstraints percentWidth="25.0"/>
+        <ColumnConstraints prefWidth="64.0"/>
+        <ColumnConstraints percentWidth="25.0"/>
+        <ColumnConstraints prefWidth="72.0"/>
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0" />
-        <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0" />
-        <RowConstraints />
+        <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0"/>
+        <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0"/>
+        <RowConstraints/>
         <RowConstraints percentHeight="80"/>
     </rowConstraints>
 </GridPane>
