Add markdown to output format Proper use of input and output format enum

--- a/src/main/resources/MainWindow.fxml
+++ b/src/main/resources/MainWindow.fxml
@@ -33,6 +33,7 @@
                     <String fx:value="Pdf"/>
                     <String fx:value="Word"/>
                     <String fx:value="Html"/>
+                    <String fx:value="Markdown"/>
                 </FXCollections>
             </items>
         </ComboBox>
