--- a/Pandoc-UI/MainWindow.xaml
+++ b/Pandoc-UI/MainWindow.xaml
@@ -22,6 +22,7 @@
             <RowDefinition Height="5"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="5"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -58,5 +59,14 @@
             <Button x:Name="ConvertFileButton" Content="Convert file" HorizontalAlignment="Center" Visibility="Hidden" Click="PandocConvert"/>
             <Controls:ProgressRing x:Name="ConvertSpinner" Visibility="Hidden" Grid.Column="2" Margin="10,0,0,0" Width="26" Height="26" />
         </StackPanel>
+
+        <StackPanel Grid.Row="5" Grid.ColumnSpan="7">
+            <ListView x:Name="PresetList" HorizontalAlignment="Stretch" Height="100" Margin="0,5,0,0" VerticalAlignment="Top">
+                <ListViewItem Content="Test1"/>
+                <ListViewItem Content="Test2"/>
+                <ListViewItem Content="Test3"/>
+            </ListView>
+        </StackPanel>
+
     </Grid>
 </Controls:MetroWindow>
